dnl Process this file with autoconf to produce a configure script.
AC_INIT(brctl/brctl.c)

AC_ARG_WITH( linux, [  --with-linux-headers     Location of the linux headers to use], 
    KERNEL_HEADERS=$withval, KERNEL_HEADERS="/usr/src/linux/include")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_WAIT3
AC_CHECK_FUNCS(gethostname socket strdup uname)

AC_CHECK_FUNC(if_nametoindex, HAVE_IF_INDEX=1)

AC_SUBST(KERNEL_HEADERS)
AC_SUBST(HAVE_IF_INDEX)

AC_OUTPUT(doc/Makefile libbridge/Makefile brctl/Makefile Makefile)
